# telegram-bot

./: Cargo.toml  README.md  metadata.json
pkg/: manifest.json
telegram_interface/: Cargo.toml
telegram_interface/src/: api.rs  lib.rs
tg/: Cargo.toml
tg/src/: api.rs  helpers.rs  http.rs  lib.rs  structs.rs  tg_api.rs
tg_interface/: Cargo.toml
