[package]
name = "telegram_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "3232423" }
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }
multipart = "0.18.0"
url = "2.5.0"
