[package]
name = "tg"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "3232423" }
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] }
telegram_interface = { path = "../telegram_interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }
multipart = "0.18.0"
url = "2.5.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
